# realtime_lane_detection

./: .gitignore  CMakeLists.txt  GTN.py  HT.py  IPM.py  LSD.py  Omain.py  Pre-HT.cpp  Processing.cpp  Processing.hpp  RTLD_1.py  Stream.cpp  Stream.hpp  Streaming.py  VideoWidgets.pro  curvefit.cpp  curvefit.pro  d_bus.cpp  d_bus.h  dataset.txt  debug.py  decisionmaking.cpp  decisionmaking.h  decisionmaking.pro  detection.cpp  detection.h  detection.pro  filter.cpp  filter.pro  frame_debug.py  fullscreenvideoviewer.cpp  fullscreenvideoviewer.h  g++ command.txt  gabor.py  gui.cpp  gui.h  gui.pro  ipm.cpp  ipm.h  ipm.pro  (+58 more)
back-end/: #ipm.cpp  #stream.cpp  #stream.h  #stream_in.cpp  curvefit.cpp  curvefit.h  decision_making.cpp  decision_making.h  eliminatefalsedetection.cpp  eliminatefalsedetection.h  filter.cpp  filter.h  ipm.cpp  ipm.h  kalman.cpp  kalman.h  linedetection.cpp  linedetection.h  pipeline.cpp  pipeline.h  region_growing.cpp  region_growing.h  stream.cpp  stream.h  stream_in.cpp  stream_in.h  stream_out.cpp  stream_out.h
front-end/: mainwindow.cpp  mainwindow.h  multivideoviewer.cpp  multivideoviewer.h  opencv_opengl_viewer.cpp  side_bar.cpp  side_bar.h  videocontrols.h  videostatistics.h  videowidget.cpp  videowidget.h
include/: Processing.hpp  Stream.hpp  processing.hpp
logger/: logger.pro
process_a/: main.cpp  master.h
process_b/: main.cpp
process_c/: ipm.cpp  ipm.h  ipm.pro
process_d/: d_bus.h  detection.h  detection.pro  main.cpp
process_e/: d_bus.cpp  reg.pro
process_f/: d_bus.cpp  d_bus.h  main.cpp  track.cpp  track.h  track.pro
process_g/: gui.h  gui.pro  main.cpp  resources.qrc  videowidget.cpp
scripts/: setup.sh  setup_detection.sh  setup_gui.sh  setup_ipm.sh  setup_logger.sh  setup_master.sh  setup_reg.sh  setup_stream.sh  setup_track.sh
sidebar/: curvefitwidget.h  inputmethodwidget.cpp  side_bar.cpp
src/: GaborFilter.cpp  HoughTransfrom.cpp  IPM.cpp  LSD.cpp  Pre-HT.cpp  Pre-LSD.cpp  Processing.cpp  Stream.cpp  accuracy.cpp  ipm.cpp  lsd.cpp  main.cpp  processing.cpp  roi.cpp  stream.cpp
(+41 files in other folders)
